[package]
name = "announcer"
version = "0.1.0"
description = "SEAL Announcer: on-chain stealth payment announcements for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "announcer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
